// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: ghost, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  border: none;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: hsl(240 4% 85%/35%);
  color: #010205;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px + 2px) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px + 2px), 6px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: hsl(240 4% 70%/35%);
    border-color: hsl(240 4% 70%/35%);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: ghost, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  border: none;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: hsl(240 3% 26%/35%);
  color: #FBFCFF;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px + 2px) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px + 2px), 6px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: hsl(240 3% 41%/35%);
    border-color: hsl(240 3% 41%/35%);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: ghost, hideLabel: false, disabled: false, loading: false and theme: true 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  border: none;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: hsl(240 3% 26%/35%);
  color: #FBFCFF;
  --p-internal-scaling-factor: calc(4 / 13);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px + 2px) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px + 2px), 6px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: hsl(240 3% 41%/35%);
    border-color: hsl(240 3% 41%/35%);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, disabled: true, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #FBFCFF;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #7E7F82;
  color: #AFB0B3;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px );
  gap: 0;
  cursor: not-allowed;
  border-color: #7E7F82;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: 0;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
    gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  }
}

@media(min-width:760px) {
  .root {
    padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px );
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}

@media(min-width:1000px) {
  .root {
    padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
    gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  }
}

@media(min-width:1300px) {
  .root {
    padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px );
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}

@media(min-width:1760px) {
  .root {
    padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
    gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #010205;
  color: #FBFCFF;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  filter: invert(1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: #535457;
    border-color: #535457;
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #FBFCFF;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #FBFCFF;
  color: #010205;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  filter: invert(1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 3`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #010205;
  color: #FBFCFF;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  filter: invert(1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: #535457;
    border-color: #535457;
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: true 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #010205;
  color: #FBFCFF;
  --p-internal-scaling-factor: calc(4 / 13);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  filter: invert(1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: #535457;
    border-color: #535457;
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: true and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #535457;
  color: #535457;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: not-allowed;
  border-color: #535457;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  opacity: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  filter: invert(1);
  opacity: 0;
}
.spinner {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  pointer-events: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  filter: invert(1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: true, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #949598;
  color: #535457;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: not-allowed;
  border-color: #949598;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: transparent;
  color: #010205;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: rgba(148, 149, 152, .18);
    border-color: #6B6D70;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #FBFCFF;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: transparent;
  color: #FBFCFF;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: rgba(148, 149, 152, .18);
    border-color: #88898C;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: tertiary, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: transparent;
  color: #010205;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: rgba(148, 149, 152, .18);
    border-color: #6B6D70;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: arrow-right, iconSource: , variant: tertiary, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #FBFCFF;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: transparent;
  color: #FBFCFF;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: pointer;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: clamp(-16px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * -0.5 * 16px), -2px);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: rgba(148, 149, 152, .18);
    border-color: #88898C;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for icon: none, iconSource: , variant: primary, hideLabel: false, disabled: true, loading: true and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top !important;
  outline: 0 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  text-align: start;
  -webkit-appearance: none;
  appearance: none;
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border: 2px solid #010205;
  border-radius: 4px;
  transform: translate3d(0,0,0);
  background-color: #535457;
  color: #535457;
  --p-internal-scaling-factor: 1;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding: calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px ) max(calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px ), 4px);
  gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
  cursor: not-allowed;
  border-color: #535457;
  margin: 0;
}
.root::-moz-focus-inner {
  border: 0;
}
.root:focus {
  outline: 0;
}
.root:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  opacity: 0;
}
.spinner {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  pointer-events: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  filter: invert(1);
}
.icon {
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  opacity: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
